demo/v0.7.0/de/guidance.md
# Anleitung - MII Implementation Guide Module Template v2027.0.0-template.0.7.0

* [**Inhaltsverzeichnis**](toc.md)
* **Anleitung**

## Anleitung

Dieser Abschnitt bündelt die fachlichen Hinweise zur Umsetzung und Nutzung des Moduls **Module Template**.

### Allgemeine Umsetzungshinweise

* **[Datensätze und Beschreibungen](artifacts.md#2)** — die Datenelemente des Moduls, beschrieben als logische Modelle in der Artefakt-Übersicht. (Dies ist ein Link in die generierte Artefakt-Liste, keine eigene Seite; der Anker ist positionsabhängig — siehe `docs/page-structure.md` in diesem Repository.)
* **[UML-Diagramme](uml-diagrams.md)** — visuelle Darstellung der Datenmodelle und ihrer Beziehungen.

### Zielgruppenspezifische Hinweise

* **[Anleitung für Forschende](researcher-guidance.md)** — für Forschende, die Moduldaten nutzen.
* **[Anleitung für Implementierende](implementer-guidance.md)** — technische Hinweise für DIZ-Implementierende.

> [TODO: Ergänzen Sie modul-spezifische Hinweise, die für alle Zielgruppen relevant sind — z. B. den fachlichen Geltungsbereich oder Abgrenzungen.]

-------

Für die MII-weiten Konformitätsanforderungen siehe die [Konformitätsregeln des MII-Meta-Moduls](https://github.com/medizininformatik-initiative/kerndatensatz-meta/wiki/Conformance); für die technischen Artefakte siehe [Profile](profiles.md).

